# result-reporter

./: .gitignore  README.md  pyproject.toml
src/result-reporter/: chart.py  coursetype.py  race.py  utils.py
src/result_reporter/: chart.py  coursetype.py  db.py  racetype.py  report.py  utils.py
